--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ body {
         margin-top: 0;
     }
     .card__proof {
-        margin: 36px 0 0 0;
+        margin: 36px 0px 0 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
