--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,12 @@ body {
         margin-top: 0;
     }
     .card__proof {
-        margin: 36px 0 0 0;
+        margin-top: 36px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         line-height: 2rem;
+        margin-right: 0;
     }
 }
 
