--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     height: 446px;
     border-radius: 8px;
     overflow: hidden;
+    max-width: 100%;
 }
 .card__img {
     background-image: url(./images/image-header-desktop.jpg);
@@ -74,24 +75,33 @@ body {
     display: none;
 }
 
-.card__Analysis {
+.card__list {
+    list-style: none;
     display: flex;
-    align-items: center;
-    margin-top: 70px;
     justify-content: space-between;
+    line-height: 1.6rem;
+    margin-top: 74px;
 }
-.card__proof {
-    font-family: 'Inter';
+
+.card__list li {
+    font-family: Inter;
     color: white;
-    margin-right: 64px;
-}
-.card__proof span {
-    font-size: 14px;
-    font-family: 'Lexend Deca', 'sans-serif';
-    color: var(--stat-heading);
-    font-weight: 300;
+    font-weight: 700;
+    font-size: 1.4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     text-transform: uppercase;
 }
+
+.card__list  span {
+    font-size: 13px;
+    font-family: Lexend Deca;
+    font-weight: 300;
+    color: var(--stat-heading);
+    
+}
+
 @media (max-width: 375px) {
     .card {
         display: block;
@@ -106,7 +116,7 @@ body {
     }
 
     .card__box {
-        padding: 44px 35px 40px 35px;
+        padding: 44px 35px 0 35px;
         width: 100%;
         text-align: center;
     }
@@ -121,21 +131,17 @@ body {
     }
 
     .card__introduction {
-        margin-bottom: 16px;
     }
 
-    .card__Analysis {
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin-top: 0;
+    .card__list {
+        display: inline-block;
+        margin-top: 40px;
     }
-    .card__proof {
-        margin-top: 36px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        line-height: 2rem;
-        margin-right: 0;
+
+    .card__list li {
+        align-items: center;
+        align-self: center;
+        margin-bottom: 32px;
     }
 }
 
